Skip to content

Enhance TS demuxer to support VDR edits

I use vlc to stream mpeg2 transport streams (dvb-t) via ftp. One of the things which is annoying is that the skip forward/backward hotkeys don't work.

Looking at the code I can see that this is because it can be difficult to determine the "time index" accurately. However for this use case, a reasonable approximation will do, and this can be done by estimating the mux rate based on the embedded PCR.

The attached patch (against 1.0-bugfix) does this and now the hotkeys work perfectly. It has the added advantage of now displaying the length of the show too.

Edited by François Cartegnie
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information