TS demux: Enhance TS demuxer to support duration and current time

It closes #2985.